heroic banner spacing fix

--- a/blocks/herobanner/herobanner.css
+++ b/blocks/herobanner/herobanner.css
@@ -5,7 +5,6 @@
   overflow: hidden;
   padding-top:225px;
   padding-bottom: 150px;
-  margin-bottom: 45px;
   aspect-ratio: 320 / 133;
 }
 .hero-banner-container.hero-carousal-variation {
@@ -278,9 +277,6 @@
 
 /* Responsive adjustments */
 @media (width <= 991px) {
-  .hero-banner-container {
-    margin-bottom: 28px;
-  }
   /* .hero-banner-container img {
     object-fit: cover;
   } */
@@ -365,7 +361,6 @@
   .hero-banner-container.hero-carousal-variation  {
     padding-left: 0;
     position: relative;
-    margin-bottom: 24px;
   }
   .hero-banner-container.hero-carousal-variation {
     height: 654px;
